--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,28 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-<meta charset="UTF-8">
-<meta name="description" content="{{site.site_description}}">
-<meta name="author" content="{{site.site_author}}">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>{{site.site_name}}</title>
-
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700">
-<link rel="stylesheet" href="/assets/css/main.css">
-
-<!--[if lt IE 9]>
-<script src="/assets/js/html5.js"></script>
-<![endif]-->
-
-</head>
-
-<body>
-
-  <header class="global-header" role="banner">
-    <h1><a href="/"><strong>Easyart</strong>Developers</a></h1>
-  </header>
+{% include header.html %}
 
   <div class="content row">
 
@@ -54,12 +30,4 @@
 
   </div>
 
-  <footer class="global-footer" role="contentinfo">
-    <p>&copy; Copyright 2012 Easyart. All rights reserved.</p>
-  </footer>
-
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script src="/assets/js/app.js"></script>
-
-</body>
-</html>
+{% include footer.html %}
