--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,28 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-<meta charset="UTF-8">
-<meta name="description" content="{{site.site_description}}">
-<meta name="author" content="{{site.site_author}}">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>{{page.title}} | {{site.site_name}}</title>
-
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700">
-<link rel="stylesheet" href="/assets/css/main.css">
-
-<!--[if lt IE 9]>
-<script src="/assets/js/html5.js"></script>
-<![endif]-->
-
-</head>
-
-<body>
-
-  <div class="global-header" role="banner">
-    <h1><a href="/"><strong>Easyart</strong>Developers</a></h1>
-  </div>
+{% include header.html %}
 
   <div class="content row">
 
@@ -39,9 +15,7 @@
 
         <div id="disqus_thread"></div>
         <script type="text/javascript">
-          /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-          var disqus_shortname = 'easyartdevelopers'; // required: replace example with your forum shortname
-          /* * * DON'T EDIT BELOW THIS LINE * * */
+          var disqus_shortname = 'easyartdevelopers';
           (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
             dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
@@ -76,12 +50,4 @@
 
   </div>
 
-  <div class="global-footer" role="contentinfo">
-    <p>&copy; Copyright 2012 Easyart. All rights reserved.</p>
-  </div>
-
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script src="/assets/js/app.js"></script>
-
-</body>
-</html>
+{% include footer.html %}
