--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,21 +10,7 @@
 
     <aside class="col-4 offset-1">
       <div class="content-sec" role="complementary">
-        
-        <div class="widget">
-          <h3>About this blog</h3>
-          <p>This is the blog of the developers at Easyart. We have a strong focus on user-centered design, test-driven development and emerging technologies.</p>
-        </div>
-
-        <div class="widget">
-          <h3>Recent posts</h3>
-          <ol>
-            {% for post in site.posts limit: 10 %}
-            <li><a href="{{post.url}}">{{post.title}}</a></li>
-            {% endfor %}
-          </ol>
-        </div>
-
+        {% include sidebar.html %}
       </div>
     </aside>
 
