--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,6 @@
           </header>
           {{content}}
         </article>
-
         <div id="disqus_thread"></div>
         <script type="text/javascript">
           var disqus_shortname = 'easyartdevelopers';
@@ -24,27 +23,12 @@
         </script>
         <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-
       </div>    
     </section>
 
     <aside class="col-4 offset-1">
       <div class="content-sec" role="complementary">
-        
-        <div class="widget">
-          <h3>About this blog</h3>
-          <p>This is the blog of the developers at Easyart. We have a strong focus on user-centered design, test-driven development and emerging technologies.</p>
-        </div>
-
-        <div class="widget">
-          <h3>Recent posts</h3>
-          <ol>
-            {% for post in site.posts limit: 10 %}
-            <li><a href="{{post.url}}">{{post.title}}</a></li>
-            {% endfor %}
-          </ol>
-        </div>
-
+        {% include sidebar.html %}
       </div>
     </aside>
 
