--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="widget">
 	<h3>Subscribe</h3>
-	<p><a href="/feed.xml">Subscribe to the RSS feed</a></p>
+	<p><a href="http://feeds.feedburner.com/EasyartDevelopers">Subscribe to the RSS feed</a></p>
 </div>
 
 <div class="widget">
