--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,7 +16,7 @@
 
 <div class="widget">
   <h3>About this blog</h3>
-  <p>This is the blog of the developers at Easyart. We have a strong focus on user-centered design, test-driven development and emerging technologies.</p>
+  <p>This is the blog of the developers at <a href="http://www.easyart.com" target="_blank">Easyart</a>. We have a strong focus on user-centered design, test-driven development and emerging technologies.</p>
   <p><a href="/archives.html">See all posts &raquo;</a></p>
 </div>
 
