--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,8 +76,7 @@ strong {
 blockquote {
   padding-left: 1.5em;
   border-left: 3px solid #cccccc;
-  font-style: italic;
-  color: #999999; }
+}
 
 pre {
   overflow: auto;
