Added author url to Steve Fullers posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,7 @@
               {% if page.author contains "John Pash" %}<a href="/authors/john-pash/">{{page.author}}</a>
               {% elsif page.author contains "Nick Boyce" %}<a href="/authors/nick-boyce/">{{page.author}}</a>. Find me on <a href="https://plus.google.com/u/1/108806228703128779712?rel=author">Google+</a>
               {% elsif page.author contains "Steve Rydz" %}<a href="/authors/steve-rydz/">{{page.author}}</a>
+              {% elsif page.author contains "Steve Fuller" %}<a href="/authors/steve-fuller/">{{page.author}}</a>
               {% endif %}
             </p>
           </header>
